# Quartz-Graphics-Improved

./: .gitignore  CMakeLists.txt  TODO.txt  premake5.lua
editor/: CMakeLists.txt  Form1.Designer.cs  Form1.cs  editor.csproj
editor/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
editor/src/: colorpick.cpp  colorpick.h  editor.cpp  editor.h  main.cpp  pch.h
editor/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_win32.cpp  imgui_tables.cpp  imgui_widgets.cpp
editor/src/window/: editorwindow.h  renderwindow.cpp  renderwindow.h
engine/: CMakeLists.txt
engine/src/: c_engine.cpp  c_engine.h  c_threadpool.cpp  c_threadpool.h  common.h  log.cpp  log.h  pch.h  transform.h
engine/src/asset/: c_assetmanager.cpp  c_assetmanager.h
engine/src/asset/assets/: c_asset.h  c_materialasset.cpp  c_materialasset.h  c_modelasset.cpp  c_modelasset.h  c_shaderasset.cpp  c_shaderasset.h  c_textasset.cpp  c_textasset.h  c_textureasset.cpp  c_textureasset.h
engine/src/asset/filesystem/: c_filestream.cpp  c_filestream.h  (+2 more)
engine/src/entity/: entity.h  scene.cpp  scene.h  world.cpp  world.h
engine/src/include/: engine.h
engine/src/input/: c_input.cpp  c_input.h
engine/src/render/: c_material.cpp  c_material.h  c_renderer.cpp  c_renderer.h  cbufferpool.cpp  cbufferpool.h  materialproperty.h  shaderproperty.h
engine/src/window/: c_gamewindow.cpp  c_gamewindow.h  window.cpp  window.h
graphics/: CMakeLists.txt
graphics/include/: graphics.h
graphics/src/: bindabledescriptions.cpp  bindabledescriptions.h  cbuffer.h  descheap.cpp  descheap.h  device.h  factory.cpp  framebuffer.cpp  framebuffer.h  graphicsresource.h  pipeline.cpp  pipeline.h  render3d.h  swapchain.h  texture2d.h  vbuffer.h  viewportswapchain.cpp  viewportswapchain.h
graphics/src/dx/: dxcbuffer.cpp  dxcbuffer.h  dxcpudescheap.cpp  dxcpudescheap.h  dxdescheap.h  dxdevice.cpp  dxdevice.h  dxframebuffer.cpp  dxframebuffer.h  dxgpudescheap.cpp  dxgpudescheap.h  dxpipeline.cpp  dxpipeline.h  dxrender3d.cpp  dxrender3d.h  dxswapchain.cpp  dxswapchain.h  dxtexture2d.cpp  dxtexture2d.h  dxvbuffer.cpp  dxvbuffer.h
graphics/src/nvidia/: NsightAftermathGpuCrashTracker.cpp  NsightAftermathGpuCrashTracker.h  NsightAftermathHelpers.h  NsightAftermathShaderDatabase.cpp  NsightAftermathShaderDatabase.h
(+12 files in other folders)
