file(GLOB_RECURSE sources *.h *.cpp)
set(target_name engine)
add_library(${target_name} ${sources})
set_target_properties(${target_name} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY
	${PROJECT_SOURCE_DIR}/bin/${target_name})
include_directories(src)
include_directories(${PROJECT_SOURCE_DIR}/graphics/include)
include_directories(${PROJECT_SOURCE_DIR}/lib/json)
include_directories(${PROJECT_SOURCE_DIR}/lib/lodepng)
include_directories(${PROJECT_SOURCE_DIR}/lib/spdlog)
include_directories(${PROJECT_SOURCE_DIR}/lib/glm)
include_directories(${PROJECT_SOURCE_DIR}/lib/entt/include)
include_directories(${PROJECT_SOURCE_DIR}/lib/aftermath/include)

target_precompile_headers(${target_name} PRIVATE src/pch.h)